third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/multiline-escape-space-2.stderr
TOML parse error at line 4, column 7
  |
4 | gee \   """
  |       ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
